# poliloom

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  init-db.sql
poliloom/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pgadmin-servers.json  pyproject.toml
poliloom/alembic/: env.py
poliloom/alembic/versions/: 0302be2a0730_add_trigger_to_reset_embeddings_on_name_.py  0718a0e2d1d8_initial_migration_with_all_models_and_.py  07231531a553_add_indexes_to_user_id_and_preference_.py  084925595654_add_qualifiers_json_column_to_holds_.py  0ab17a215d6e_add_entity_id_index_to_properties.py  0d24f2b5b637_drop_wikidata_only_unique_constraints_.py  146440e7d68e_refactor_country_to_reference_wikidata_.py  16e6e629a64e_add_indexes_for_deleted_at_and_.py  172f4b4de36f_add_cascade_to_has_citizenship_country_.py  1bc6a146df39_drop_revision_column_from_archived_pages.py  228051ec07ac_add_location_country_association_table.py  250667def512_remove_locations_outside_new_hierarchy.py  2b42a3abde91_migrate_datetime_columns_to_timestamptz.py  2cac5a7c8d62_add_partial_unique_indexes_for_wikidata_.py  2d84bed67490_add_cascade_delete_to_tracking_table_fk.py  2ed06e26f119_add_new_check_property_fields_.py  3111e43b8ec0_update_embedding_reset_trigger_.py  362f0d0d7ac8_add_indexes_for_stats_query_optimization.py  377c9f78ae09_add_no_response_and_browser_error_to_.py  37f7fcd0368b_add_unique_constraint_to_properties_.py  3b5cfba705c9_add_foreign_key_from_politician_.py  3e0d33c32bb6_remove_position_classes_and_location_.py  44052556e590_remove_unique_constraint_on_countries_.py  47390e7bb18e_drop_is_deceased_column_from_.py  4797852d86b9_convert_property_type_to_enum.py  4b2fb2f20669_remove_date_columns_from_holds_position_.py  4bd8515dc7c8_initial_migration_with_wikipedialink_.py  4c95e5af0ef6_add_description_columns_to_positions_.py  4cde531b1561_add_statement_id_to_wikidata_relations.py  4d8b5e4e4420_remove_commons_and_simple_wikipedia_.py  4e5af7bd6700_add_wikimedia_code_to_languages.py  53a44de8d7ff_replace_iso_code_with_iso1_code_and_.py  54299cab93c2_initial_migration.py  544ff8941985_add_has_citizenship_table.py  5508470c1e0d_add_performance_indexes_for_properties_.py  5537fc850c51_unify_property_models_and_consolidate_.py  56510affb959_add_statement_id_qualifiers_json_.py  5aef915e0ed0_initial_migration_with_many_to_many_.py  5b8250938a3e_initial_migration_clean_qid_schema.py  5e22c7045b45_add_user_id_to_archived_pages.py  (+94 more)
poliloom/poliloom/: __init__.py  archive.py  archiving.py  cli.py  database.py  dates.py  dump_reader.py  embeddings.py  enrichment.py  logging.py  models.py  page_fetcher.py  prompts.py  scheduling.py  search.py  sse.py  storage.py  vector_search.py  wikidata_date.py  wikidata_entity.py  wikidata_entity_processor.py  wikidata_statement.py
poliloom/poliloom/api/: __init__.py  app.py  archived_pages.py  auth.py  enrichment.py  entities.py  evaluations.py  events.py  politicians.py  preferences.py  schemas.py  sources.py  stats.py
poliloom/poliloom/cli/: __init__.py  main.py
poliloom/poliloom/entities/: __init__.py  country.py  factory.py  location.py  politician.py  position.py  wikidata_entity.py
poliloom/poliloom/importer/: __init__.py  entity.py  hierarchy.py  politician.py
poliloom/poliloom/models/: __init__.py  archived_page.py  base.py  entities.py  politician.py  property.py  source.py  user.py  wikidata.py
poliloom/poliloom/services/: __init__.py  archival_service.py  birthplace_extraction_service.py  class_hierarchy.py  database_inserter.py  dump_processor.py  dump_reader.py  enrichment_service.py  entity_extractor.py  entity_importer.py  import_service.py  (+9 more)
poliloom/tests/: __init__.py  conftest.py  test_api.py  test_archiving.py  test_auth.py  test_birthplace_extraction_service.py  test_country_import.py  test_csv_import.py  test_database_inserter.py  test_dates.py  test_dump_processor.py  test_dump_reader.py  test_embeddings.py  test_enrichment.py  test_enrichment_service.py  test_entity_classes.py  test_entity_extractor.py  test_entity_importer.py  test_evaluations_endpoint.py  test_hierarchy_builder.py  test_hierarchy_importer.py  test_import.py  test_import_service.py  test_import_tracking.py  test_location_import.py  test_models.py  test_page_fetcher.py  test_politician_importer.py  test_politicians_endpoint.py  test_position_extraction_service.py  test_position_import.py  test_preferences_endpoint.py  test_process_archived_page.py  test_scheduling.py  test_sse.py  test_wikidata_client.py  test_wikidata_date.py  test_wikidata_entity.py  test_wikidata_entity_processor.py  test_wikidata_statement.py
wp-wd-sync/: .gitignore  README.md  pyproject.toml  requirements.txt
wp-wd-sync/wp_wd_sync/: __init__.py  cli.py  parse.py  wikidata.py  wikipedia.py
(+337 files in other folders)
