[project]
name = "poliloom"
version = "0.1.0"
description = "API/CLI for extracting politician metadata from Wikipedia and web sources to enrich Wikidata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "python-jose[cryptography]>=3.3.0",
    "mwoauth>=0.3.7",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "sentence-transformers>=2.2.0",
    "crawl4ai>=0.4.0",
    "unmhtml>=0.2.0",
    "mistune>=3.1.3",
    "google-cloud-storage>=2.10.0",
    "tqdm>=4.66.0",
]


[project.scripts]
poliloom = "poliloom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "DATABASE_URL=postgresql://postgres:postgres@localhost:5433/poliloom_test"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-env>=1.1.0",
    "pre-commit>=3.0.0",
]
